# we-move

./: AGENTS.md  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
app/: main.py
app/core/: config.py  logging.py
instructions/: PIPELINE_BLUEPRINT.md  PYTHON_GUIDELINES.md
