[project]
name = "pytemplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.2.0",
    "fastapi[standard]>=0.117.1",
    "beautifulsoup4>=4.12.3",
    "google-api-python-client>=2.137.0",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.0",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "tenacity>=9.0.0",
    "typer>=0.12.5",
    "tqdm>=4.66.5",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "mcp>=1.15.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]
